# emerald-ems

./: .env.template  .gitignore  .markdownlint-cli2.yaml  LICENSE  README.md  pyproject.toml
emerald_ems/: api.py  const.py  exceptions.py
emerald_ems/schemas/: device_flashes.json  property_info.json  property_list.json  sign_in.json  token_refresh.json
tests/: conftest.py  payloads.py  sign_in.py  when_querying_the_api.py  when_querying_the_live_api.py
